objects/Project_Piece__c.object
<CustomObject>
    <fields>
        <fullName>Project_Specialist__c</fullName>
        <formula>Project__r.Assigned_Specialist__r.User_Full_Name__c</formula>
        <label>Project Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <formula>Text(Project__r.Approval_Stage__c)</formula>
        <label>Project Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Training_Info_Updated__c</fullName>
        <label>Project Training Info Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Type_Action__c</fullName>
        <formula>Project__r.Project_Type_Action__c</formula>
        <inlineHelpText>used for reporting</inlineHelpText>
        <label>Project Type/Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <formula>Project__r.Project_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>SFDC_520_Quote__c</referenceTo>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proof_Approved__c</fullName>
        <label>Proof Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_Training_Date__c</fullName>
        <formula>Project__r.Proposed_Training_Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposed Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospect_Information__c</fullName>
        <label>Prospect Information</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <formula>CreatedDate</formula>
        <inlineHelpText>Formula field that records the Project Asset Created Date as the purchase date</inlineHelpText>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Content_QA_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>updated by workflow</inlineHelpText>
        <label>QA - Content QA Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QA_Design_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>updated by workflow when the design approval process is completed</inlineHelpText>
        <label>QA - Design Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QA_Final_QA_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QA - Final QA Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quality_Assurance__c</fullName>
        <label>Quality Assurance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reg_Gath_Goal__c</fullName>
        <formula>IF(TEXT(Alternate_Start_Date__c) != null, Alternate_Start_Date__c+10, DATEVALUE( CreatedDate ) +10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>autocalculated by the system for Website pieces only- Project Created Date + 7 Days</inlineHelpText>
        <label>Website Requirements Goal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_POA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related POA</label>
        <referenceTo>POA__c</referenceTo>
        <relationshipLabel>Project Pieces</relationshipLabel>
        <relationshipName>Project_Pieces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requirements_Gathered__c</fullName>
        <label>Requirements Gathered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Notes_10__c</fullName>
        <label>Review Notes (10)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Review_Notes_11__c</fullName>
        <label>Review Notes (11)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Review_Notes_12__c</fullName>
        <label>Review Notes (12)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Revisions_Requested__c</fullName>
        <label># Revisions Requested</label>
        <summaryFilterItems>
            <field>Project_Runner__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Project Runner Request</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Project_Runner__c.Runner_Action__c</field>
            <operation>equals</operation>
            <value>request</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Project_Runner__c.Revision_Status__c</field>
            <operation>notEqual</operation>
            <value>Internal QA Correction(s)</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_Runner__c.Project_Piece__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rush_Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A hidden field triggered by the Rush This Piece button that displays the fire icon in the visible Rush This Piece field.</description>
        <label>Rush</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rush_This_Piece__c</fullName>
        <description>Displays a fire icon if someone has clicked the Rush This Piece button.</description>
        <formula>IF(
   Rush_Hidden__c = TRUE, 
   IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000000xzUL&amp;oid=00D700000008zHZ&amp;lastMod=1320445914000&quot;, &quot;On Fire&quot;) , 
   &quot;&quot;
)</formula>
        <inlineHelpText>Fire means go fast!</inlineHelpText>
        <label>Rush This Piece</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rushed_Last__c</fullName>
        <inlineHelpText>When was the last time this piece was rushed</inlineHelpText>
        <label>Rushed Last</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scanner_Received_Setup__c</fullName>
        <label>Scanner Received/Setup</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scanner_Tested__c</fullName>
        <label>Scanner Tested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Setup_Instructions_Sent__c</fullName>
        <label>Setup Instructions Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Pieces (Shipping Contact)</relationshipLabel>
        <relationshipName>Project_Pieces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Soft_Close_Age__c</fullName>
        <formula>Today()-  Date_Stage_Updated_to_Completed__c</formula>
        <inlineHelpText>formula field that calculates the difference between the date the piece was closed and the last modified date of the piece - hidden field for reporting only</inlineHelpText>
        <label>Soft Close Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_By__c</fullName>
        <formula>Project__r.Sold_By__c</formula>
        <inlineHelpText>formula field that reads the related opportunity owner from the project</inlineHelpText>
        <label>Sold By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_Data_Verified__c</fullName>
        <label>Sold Data Verified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Special_Account_Status__c</fullName>
        <formula>Account__r.Account_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Special Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Duration__c</fullName>
        <formula>IF(  ISPICKVAL(Piece_Status__c, &quot;Open&quot;), Today()- Date_Stage_Last_Updated__c , Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Type__c</fullName>
        <label>Stage Type</label>
        <picklist>
            <controllingField>Project_Piece_Stage__c</controllingField>
            <picklistValues>
                <fullName>Add&apos;l Information Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add&apos;l Information Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build in Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Reviewed Internally</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Reviewed w/Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Revisions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Revisions Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content QA Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content QA Corrections Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content QA Corrections in Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design QA Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design QA Corrections Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design QA Corrections in Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final QA Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final QA Corrections Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final QA Corrections Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final QA Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Content QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Design QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Dealer Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Design Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revisions Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revisions in Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Process__c</fullName>
        <label>Start Process</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <formula>Project__r.Team_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_State_ID__c</fullName>
        <formula>Account__r.Territory_State__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory State ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeline__c</fullName>
        <description>Intended for use with Mailer project pieces only.</description>
        <inlineHelpText>Rush requires approval from Keith P. Intended for use with Mailer project pieces only.</inlineHelpText>
        <label>Timeline</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rush</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Days_to_Implement__c</fullName>
        <formula>IF (TEXT( Piece_Status__c ) = &quot;Closed&quot; &amp;&amp; ISBLANK(Alternate_Start_Date__c) , Date_Stage_Updated_to_Completed__c -  DATEVALUE(CreatedDate), 
IF (TEXT( Piece_Status__c ) = &quot;Closed&quot; &amp;&amp; !ISBLANK(Alternate_Start_Date__c) , Date_Stage_Updated_to_Completed__c - Alternate_Start_Date__c , 
NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that calculates the days between the project piece created date or the alternate start date and the date the milestone &quot;Date Stage updated to completed&quot;</inlineHelpText>
        <label>Total Days to Implement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Design_Time__c</fullName>
        <inlineHelpText>rolls up the total design time submitted by a designer completing a comp, build, revision request</inlineHelpText>
        <label>Total Design Time</label>
        <summarizedField>Project_Runner__c.Design_Time__c</summarizedField>
        <summaryForeignKey>Project_Runner__c.Project_Piece__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Manuals__c</fullName>
        <formula>Project__r.Total_number_of_users__c</formula>
        <inlineHelpText>this is a formula field that copies over the text entered in the field Total # of Users from the Project</inlineHelpText>
        <label>Total Manuals</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trader_Canada__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by workflow. Used to determine if TC should have access to this Project Asset via sharing rules. Have to use workflow because sharing rules cannot see formula fields.</description>
        <label>Trader Canada?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trainer_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Pieces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trainer_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Pieces1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trainer_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Pieces2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Amount_Dates_Confirmed__c</fullName>
        <label>Training Amount/Dates Confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Completed__c</fullName>
        <label>Training Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Coordinated__c</fullName>
        <label>Training Coordinated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Dates_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training Dates Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_End_Date__c</fullName>
        <label>Training End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Finalization_Completed__c</fullName>
        <label>Training Finalization Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Scheduled__c</fullName>
        <description>Date Training was scheduled by Regional</description>
        <label>Training Scheduled/Trainer Assigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Start_Date__c</fullName>
        <label>Training Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Travel_Arrangements_Approved__c</fullName>
        <label>Travel Arrangements Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Travel_Arrangements_Found__c</fullName>
        <label>Travel Arrangements Found</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Travel_Arrangements_Purchased__c</fullName>
        <label>Travel Arrangements Purchased</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Turn_Time__c</fullName>
        <formula>Date_QA_Approved__c -  DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates the days between the piece creation date and the Date QA Approved through the approval process</inlineHelpText>
        <label>Turn Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uploaded_Into_System__c</fullName>
        <label>Uploaded Into System</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Uploaded_Printed_Shipped__c</fullName>
        <label>Uploaded/Printed/Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ValidationRules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VinCamera_Serial__c</fullName>
        <label>VinCamera Serial #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VinSolutions_Site__c</fullName>
        <label>VinSolutions Site</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VinVideos_Enabled__c</fullName>
        <label>VinVideos Enabled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WAM__c</fullName>
        <formula>Account__r.WAM2__r.User_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WAM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>We_Owe__c</fullName>
        <formula>Project__r.We_Owe__c</formula>
        <inlineHelpText>This is auto-populated from the Opportunity&gt;Project&gt;Project Pieces</inlineHelpText>
        <label>Implementation Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_1st_Proof_Goal__c</fullName>
        <formula>IF(TEXT(Alternate_Start_Date__c) != null, Alternate_Start_Date__c+31, DATEVALUE( CreatedDate ) +31)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>autocalculated by the system for Website pieces only - Created Date + 31 Days</inlineHelpText>
        <label>Website 1st Proof Goal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Website_Approval_Status__c</fullName>
        <formula>IF(BEGINS ( Product_Name__c , &quot;Website&quot;), 
IF (TEXT( Milestone_5_Completed__c ) = NULL &amp;&amp;  Website_Site_App_d_Goal__c &gt; TODAY() , &quot;Pending&quot;, 
IF (TEXT( Milestone_5_Completed__c ) = NULL &amp;&amp; Website_Site_App_d_Goal__c&lt; TODAY() , &quot;Overdue&quot;, 
IF (TEXT( Milestone_5_Completed__c ) != NULL &amp;&amp; Milestone_5_Completed__c &gt; Website_Site_App_d_Goal__c , &quot;Missed&quot;, 
IF (TEXT(Milestone_5_Completed__c ) != NULL &amp;&amp; Milestone_5_Completed__c &lt;= Website_Site_App_d_Goal__c , &quot;Completed&quot;, 
&quot;Not Started&quot; 
)))), NULL)
&amp; 
IF(ISBLANK( Milestone_5_Completed__c ), 
&quot; &quot;&amp; 
TEXT( Website_Site_App_d_Goal__c -TODAY()), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Build_Goal__c</fullName>
        <formula>IF(TEXT(Alternate_Start_Date__c) != null, Alternate_Start_Date__c+45, DATEVALUE( CreatedDate ) +45)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>for Website pieces only - Created Date + 45 days</inlineHelpText>
        <label>Website Build Goal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Website_Build_Status__c</fullName>
        <formula>IF(BEGINS ( Product_Name__c , &quot;Website&quot;), 
IF (TEXT( Milestone_4_Completed__c ) = NULL &amp;&amp;  Website_Build_Goal__c  &gt; TODAY() , &quot;Pending&quot;, 
IF (TEXT( Milestone_4_Completed__c ) = NULL &amp;&amp; Website_Build_Goal__c &lt; TODAY() , &quot;Overdue&quot;, 
IF (TEXT( Milestone_4_Completed__c ) != NULL &amp;&amp; Milestone_4_Completed__c &gt; Website_Build_Goal__c , &quot;Missed&quot;, 
IF (TEXT(Milestone_4_Completed__c ) != NULL &amp;&amp; Milestone_4_Completed__c &lt;= Website_Build_Goal__c , &quot;Completed&quot;, 
&quot;Not Started&quot; 
)))), NULL)
&amp; 
IF(ISBLANK( Milestone_4_Completed__c ), 
&quot; &quot;&amp; 
TEXT( Website_Build_Goal__c -TODAY()), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Milestone 4</inlineHelpText>
        <label>Website Build Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Domain_Created__c</fullName>
        <label>Website Domain Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Website_Go_Live_Goal__c</fullName>
        <formula>IF(TEXT(Alternate_Start_Date__c) != null, Alternate_Start_Date__c+60, DATEVALUE( CreatedDate ) +60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>autocalculated by the system for Website pieces only - created date + 60 days</inlineHelpText>
        <label>Website Go Live Goal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Website_Id__c</fullName>
        <label>Website Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Intro_Goal_Date__c</fullName>
        <formula>IF(TEXT(Alternate_Start_Date__c) != null, Alternate_Start_Date__c+3, DATEVALUE( CreatedDate ) +3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>autocalculated by the system for Website Pieces only - Intro Goal Date is 3 days from the date</inlineHelpText>
        <label>Website Intro Goal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Website_Intro_Status__c</fullName>
        <formula>IF(BEGINS ( Product_Name__c , &quot;Website&quot;),
IF (TEXT( Milestone_1_Completed__c ) = NULL &amp;&amp;  Website_Intro_Goal_Date__c  &gt; TODAY() , &quot;Pending&quot;, 
IF (TEXT( Milestone_1_Completed__c ) = NULL &amp;&amp;  Website_Intro_Goal_Date__c  &lt; TODAY() , &quot;Overdue&quot;,
IF (TEXT( Milestone_1_Completed__c ) != NULL &amp;&amp;  Milestone_1_Completed__c   &gt;  Website_Intro_Goal_Date__c  , &quot;Missed&quot;, 
IF (TEXT(Milestone_1_Completed__c ) != NULL &amp;&amp; Milestone_1_Completed__c &lt;= Website_Intro_Goal_Date__c , &quot;Completed&quot;,
&quot;Not Started&quot; 
)))), NULL)
&amp;
IF(ISBLANK( Milestone_1_Completed__c ), 
&quot;  &quot;&amp;
TEXT(Website_Intro_Goal_Date__c-TODAY()), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website Intro Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Req_Gath_Status__c</fullName>
        <formula>IF(BEGINS ( Product_Name__c , &quot;Website&quot;),
IF (TEXT( Milestone_2_Completed__c ) = NULL &amp;&amp;   Reg_Gath_Goal__c   &gt; TODAY() , &quot;Pending&quot;, 
IF (TEXT( Milestone_2_Completed__c ) = NULL &amp;&amp;   Reg_Gath_Goal__c   &lt; TODAY() , &quot;Overdue&quot;,
IF (TEXT( Milestone_2_Completed__c ) != NULL &amp;&amp;  Milestone_2_Completed__c   &gt;   Reg_Gath_Goal__c   , &quot;Missed&quot;, 
IF (TEXT(Milestone_2_Completed__c ) != NULL &amp;&amp; Milestone_2_Completed__c &lt;=  Reg_Gath_Goal__c  , &quot;Completed&quot;,
&quot;Not Started&quot; 
)))), NULL)
&amp;
IF(ISBLANK( Milestone_2_Completed__c ), 
&quot;  &quot;&amp;
TEXT( Reg_Gath_Goal__c -TODAY()), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website Req Gath Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Scheduled_Go_Live_Date__c</fullName>
        <inlineHelpText>this field is only visible by the Director of Creative and can only be updated by the person in that role</inlineHelpText>
        <label>Website Scheduled Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Website_Site_App_d_Goal__c</fullName>
        <formula>IF(TEXT(Alternate_Start_Date__c) != null, Alternate_Start_Date__c+58, DATEVALUE( CreatedDate ) +58)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>autocalculated by the system for Website Pieces only - Created Date + 58 days</inlineHelpText>
        <label>Website Site App&apos;d Goal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Website_Upload_Status__c</fullName>
        <formula>IF(BEGINS ( Product_Name__c , &quot;Website&quot;), 
IF (TEXT( Milestone_6_Completed__c ) = NULL &amp;&amp;  Website_Go_Live_Goal__c  &gt; TODAY() , &quot;Pending&quot;, 
IF (TEXT( Milestone_6_Completed__c ) = NULL &amp;&amp; Website_Go_Live_Goal__c&lt; TODAY() , &quot;Overdue&quot;, 
IF (TEXT( Milestone_6_Completed__c ) != NULL &amp;&amp; Milestone_6_Completed__c &gt; Website_Go_Live_Goal__c, &quot;Missed&quot;, 
IF (TEXT(Milestone_6_Completed__c ) != NULL &amp;&amp; Milestone_6_Completed__c &lt;= Website_Go_Live_Goal__c , &quot;Completed&quot;, 
&quot;Not Started&quot; 
)))), NULL)
&amp; 
IF(ISBLANK( Milestone_6_Completed__c ), 
&quot; &quot;&amp; 
TEXT(Website_Go_Live_Goal__c -TODAY()), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>if Milestone 6 date is &gt; Website Go Live Goal date then the status = Missed.  If Milestone 6 date is &lt; Website Go Live goal date then the status = Completed</inlineHelpText>
        <label>Website Upload Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <formula>IF(BEGINS ( Product_Name__c , &quot;Website&quot;), 
IF (TEXT( Milestone_3_Completed__c ) = NULL &amp;&amp;  Website_1st_Proof_Goal__c  &gt; TODAY() , &quot;Pending&quot;, 
IF (TEXT( Milestone_3_Completed__c ) = NULL &amp;&amp; Website_1st_Proof_Goal__c &lt; TODAY() , &quot;Overdue&quot;, 
IF (TEXT( Milestone_3_Completed__c ) != NULL &amp;&amp; Milestone_3_Completed__c &gt; Website_1st_Proof_Goal__c , &quot;Missed&quot;, 
IF (TEXT(Milestone_3_Completed__c ) != NULL &amp;&amp; Milestone_3_Completed__c &lt;= Website_1st_Proof_Goal__c , &quot;Completed&quot;, 
&quot;Not Started&quot; 
)))), NULL)
&amp; 
IF(ISBLANK( Milestone_3_Completed__c ), 
&quot; &quot;&amp; 
TEXT( Website_1st_Proof_Goal__c -TODAY()), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website Proof Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Websites_Create_to_MS5__c</fullName>
        <formula>Milestone_5_Completed__c -  DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that calculates the days between MS5 and Created Date</inlineHelpText>
        <label>Websites-Create to MS5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_is_holding_up_progress__c</fullName>
        <label>What is holding up progress?</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting Dev Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting OEM Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Delay-Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication delay - Dev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication delay - Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Delay-Vin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrections not made</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative expectations not met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email hosting not set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expectations unclear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Revisions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory mapping not set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory not set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Feature Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - See project comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Scope Revisions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Live info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Group Delay</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>account_id__c</fullName>
        <formula>Project__r.Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that pulls the SF account id into the project piece when used for mass updating project pieces</inlineHelpText>
        <label>SF Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Times_Rushed__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of Times Rushed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project Asset</label>
    <listViews>
        <fullName>Active_Websites3</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Date_Stage_Updated_to_Completed__c</columns>
        <columns>Project_Piece_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>website,seo</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>mobile,rebate,inventory</value>
        </filters>
        <filters>
            <field>Project_Piece_Stage__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Active Websites</label>
        <sharedTo/>
    </listViews>
</CustomObject>